Update emails. Update references. Misc changes to get vignettes working.

--- a/vignettes/diagonal-case.Rmd
+++ b/vignettes/diagonal-case.Rmd
@@ -7,9 +7,8 @@ output:
     toc: true # table of content true
     toc_depth: 3  # upto three depths of headings (specified by #, ## and ###)
     number_sections: true  ## if you want number sections at each table header
-
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{BTSPAS Diagonal Case}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
